# markup: rd

= Revision history for midos

== 0.1.0 [unreleased]

* Added Gzip support to Midos.open_file.

== 0.0.3 [2015-04-10]

* Ruby 2.2 compatibility.

== 0.0.2 [2014-08-22]

* Housekeeping.

== 0.0.1 [2014-04-11]

* First release (extracted from ruby-nuggets).

== 0.0.0 [2014-04-09]

* Birthday :-)